2006-06-02  Danny Smith  <dannysmith@users.sourceforge.net>

	* include/strmif.h (VMRDeinterlaceTech): Correct typedef for DeinterlaceTech_*
	enum.

2006-06-02  Danny Smith  <dannysmith@users.sourceforge.net>

	* include/strmif.h (enum tagAnalogVideoStandard): Add missing ','.

2006-06-02  Danny Smith  <dannysmith@users.sourceforge.net>

	* include/winuser.h (DM_BITSPERPEL, DM_PELSWIDTH, DM_PELSHEIGHT,
	DM_DISPLAYFLAGS, DM_DISPLAYFREQUENCY): Remove.  Duplicates of
	wingdi.h defines.

2006-06-02  Dimitri Papadopoulos  <papadopo@users.sourceforge.net>

	* include/winuser.h ((SPI_GETMOUSETRAILS,SPI_SETMOUSETRAILS): Remove
	duplicate defines.

	* include/winnt.h (SUBLANG_ARABIC_SAUDI_ARABIA): Revert accidental
	removal.
        (SUBLANG_MARATHI_INDIA): Remove duplicate define.

2006-05-24  Christopher Faylor  <cgf@timesys.com>

	* configure.in: Update to newer autoconf.
	(thanks to Steve Ellcey)
	* configure: Regenerate.
	* aclocal.m4: New file.

2006-05-21  Danny Smith  <dannysmith@users.sourceforge.net>

	* lib/uuid.c (IID_IRpcProxyBuffer34): Remove definition. 

2006-05-12  Dimitri Papadopoulos  <papadopo@users.sourceforge.net>

	* include/rtutils.h (TraceDumpA,TraceDumpW,TracePutsA,TracePutsW)
	(TraceRegisterA,TraceRegisterW,TraceVprintfA,TraceVprintfW): Define
	as macros.
	Thanks to:    Bruce M Simpson <bms_spc at sf dot net>

2006-05-12  Dimitri Papadopoulos  <papadopo@users.sourceforge.net>

	* include/mprapi.h (MprAdminMIBBufferFree,MprAdminMIBEntryCreate)
	(MprAdminMIBEntryDelete,MprAdminMIBEntryGet,MprAdminMIBEntryGetFirst)
	(MprAdminMIBEntryGetNext,MprAdminMIBEntrySet,MprAdminMIBGetTrapInfo)
	(MprAdminMIBServerConnect,MprAdminMIBServerDisconnect)
	(MprAdminMIBSetTrapInfo): Declare functions.
	Note: MprAdminMIBSetTrapInfo is missing from mprapi.def.
	(MIB_SERVER_HANDLE): New typedef.
	(MprConfigTransportSetInfo): Declare function.
	* lib/mprapi.def (MprSetupIpInIpInterfaceFriendlyNameEnum)
	(MprSetupIpInIpInterfaceFriendlyNameFree): Fix size.
